[gd_scene load_steps=2 format=3 uid="uid://bx27hutgfw8gx"]

[ext_resource type="Script" path="res://ui/overlays/gameover_overlay.gd" id="1_rldgl"]

[node name="GameOverOverlay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rldgl")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "game_over"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="TryAgainButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "try_again"

[node name="ExitButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "leave_game"
